--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
                 <p id="calc-button" class="number">7</p>
                 <p id="calc-button" class="number">8</p>
                 <p id="calc-button" class="number">9</p>
+                <p id="calc-button backspace" class="operation">Back</p>
                 <p id="calc-button" class="number">0</p>
-                <p id="calc-button" class="number">.</p>
+                <p id="calc-button" class="decimal">.</p>
             </div>      
             <div class="right-side">
                 <p id="calc-button /" class="operation">÷</p>
